--- a/DP.html
+++ b/DP.html
@@ -10,7 +10,7 @@
       <div class="KLIK"><h3>MENU</h3></div>
       <div class="menu">
           <ul>
-              <li><a href="indeks.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="DP.html">Design Process</a></li>
               <li><a href="produk.html">Produk</a></li>
           </ul>
