--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Example</title>
+    <title>WellnessWave</title>
     <link rel="stylesheet" href="kode.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
     </div>
     <div class="parallax-container page2">
         <div class="content">
-            <h1>Welcome to Page 2</h1>
+            <h1>anggota</h1>
             <pre> <p> 
                 1. Grace Andini (Graphic Designer)
                 Graphic Designer adalah profesi di industri kreatif yang bertanggung jawab untuk membuat konten visual 
@@ -80,5 +80,15 @@
             </pre>
         </div>
     </div>
+    <div class="parallax-container page3">
+        <div class="content">
+            <h1>DOKUMENTASI</h1>
+            <pre> <p> 
+                Hi semuanyaa,sebenarnya ini bukan halaman yang terlalu penting 
+                tapi ini adalah dokumentasi kelompok kami.
+                </p>
+            </pre>
+        </div>
+        </div>
 </body>
 </html>
