--- a/index.html
+++ b/index.html
@@ -23,12 +23,41 @@
                     </div>
                 </nav>
             </header>
-            <div>
+            <div class="intro">
                 <p>Halo teman teman semua 👋🏻</p>
-                <p>Ciee yang lagi kepoin web kelompok kita wkwkwk,ga deh bercanda,jangan baper ya 😋...</p>
+                <p>Ciee yang lagi kepoin web kelompok kita wkwkwk,ga deh bercanda,jangan baper ya 😋</p>
+                <p>Selamat datang di web kelompok Wellnesswave</p>
+                <p>Nah teman teman kalian pasti bingung apasih itu wellnesswave,nah sebelumnya kalian tau ga sih tentang kalkulator BMI?</p>
+                <p>Belum tau ya ❓ Kalau gitu sini kami kasih tau 🗣️</p>
+                <p>Kalkulator BMI sendiri adalah indikator pengukuran yang digunakan untuk menentukan kategori berat badan ideal atau tidak. Nah kelompok kami membuat aplikasi kalkulator BMI dengan nama aplikasi yaitu "WellnessWave", jadi aplikasi WellnessWave adalah aplikasi yang dapat membantu kalian mengetahui indeks massa tubuh kalian. Dengan aplikasi ini, kalian dapat dengan cepat menghitung BMI kalian berdasarkan berat dan tinggi badan dan dapat memberikan solusi untuk kalian yang kekurangan/kelebihan berat badan.</p>
+                <p>Menarik banget bukan aplikasi kelompok kami 😁</p>
+                <p>Sebelumnya izinkan kelompok kami untuk memperkenalkan diri: Seperti kata pepatah "Tak kenal maka tak sayang".</p>
             </div>
         </div>
     </div>
-    <!-- Lanjutkan dengan parallax-container lainnya -->
+    <div class="parallax-container page2">
+        <div class="content">
+            <h1>Anggota</h1>
+            <div class="members">
+                <p>1. Grace Andini (Graphic Designer)</p>
+                <p>Graphic Designer adalah profesi di industri kreatif yang bertanggung jawab untuk membuat konten visual sesuai media yang dibutuhkan (digital atau cetak). Konten visual yang dimaksud adalah desain grafis seperti logo, poster, post sosial media, dll. Dalam projek ini Grace yang akan mendekorasi web dan aplikasi.</p>
+                <p>2. Josen Theodore (Content Writing)</p>
+                <p>Content writer akan bertanggung jawab terhadap produksi artikel website. Selain itu, content writer juga berhubungan dengan tim kreatif untuk menyesuaikan grafis dengan caption yang harus diunggah di media sosial perusahaan. Dalam projek ini Josen bertugas untuk membuat caption dari setiap halaman website ini.</p>
+                <p>3. Kelvin Stanly (Content Writer)</p>
+                <p>Content writer akan bertanggung jawab terhadap produksi artikel website. Selain itu, content writer juga berhubungan dengan tim kreatif untuk menyesuaikan grafis dengan caption yang harus diunggah di media sosial perusahaan. Tugas Kelvin hampir sama dengan Josen bedanya dia bertugas untuk membuat caption dari aplikasi kami yaitu "Wellnesswave".</p>
+                <p>4. Priscilla Cecilia (Web Programmer)</p>
+                <p>Tanggung Jawab dan Tugas Web Developer adalah merancang tampilan visual dan menu navigasi pada website. Menulis dan meninjau kode untuk situs, biasanya HTML, XML, atau JavaScript. Mengintegrasikan konten multimedia ke situs, termasuk menautkan gambar, video, hingga asset multimedia lainnya. Dalam projek kali ini Cilla bertugas membuat kerangka html dan css dari web kami.</p>
+                <p>Nah itu saja perkenalan dari kelompok kami, salam kenal ya semuanya 😁👊🏻</p>
+            </div>
+        </div>
+    </div>
+    <div class="parallax-container page3">
+        <div class="content">
+            <h1>Dokumentasi</h1>
+            <div class="documentation">
+                <p>Hi semuanya, sebenarnya ini bukan halaman yang terlalu penting tapi ini adalah dokumentasi kelompok kami.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
