--- a/produk.html
+++ b/produk.html
@@ -13,24 +13,23 @@
                     <div class="KLIK"><h3>MENU</h3></div>
                     <div class="menu">
                         <ul>
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="indeks.html">Home</a></li>
                             <li><a href="DP.html">Design Process</a></li>
                             <li><a href="#">Produk</a></li>
                         </ul>
                     </div>
                 </nav>
             </header>
-       <p> Nah kalian pasti udah penasaran sama produk buatan kita kan,</p>
-       <p> nah produknya ada dibawah teks ini,kuy cobain. </p>
-        <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        Fyi :
-        Untuk menggunakan aplikasinya kalian bisa klik bendera hijau yang ada di pojok kiri.
-        Jangan lupa untuk memasukan tinggi dalam bentuk METER ya 
-        
-        Semoga kalian suka dengan produknya :D
+            <pre> <p>
+                Nah kalian pasti udah penasaran sama produk buatan kita kan,nah produknya ada dibawah teks ini,kuy cobain.
+                <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                Fyi :
+                Untuk menggunakan aplikasinya kalian bisa klik bendera hijau yang ada di pojok kiri.
+                Jangan lupa untuk memasukan tinggi dalam bentuk METER ya 
+                Semoga kalian suka dengan produknya :D
 
-        Kalau terlalu lama loadingnya kalian bisa pake link ini:
-        https://scratch.mit.edu/projects/1026662630
+                Kalau terlalu lama loadingnya kalian bisa pake link ini:
+                https://scratch.mit.edu/projects/1026662630
 
                  </p>
             </pre>
