--- a/produk.html
+++ b/produk.html
@@ -21,7 +21,8 @@
                 </nav>
             </header>
             <pre> <p>
-                Nah kalian pasti udah penasaran sama produk buatan kita kan,nah produknya ada dibawah teks ini,kuy cobain.
+                Nah kalian pasti udah penasaran sama produk buatan kita kan,
+                nah produknya ada dibawah teks ini,kuy cobain.
                 <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
                 Fyi :
                 Untuk menggunakan aplikasinya kalian bisa klik bendera hijau yang ada di pojok kiri.
