--- a/produk.html
+++ b/produk.html
@@ -20,10 +20,9 @@
                     </div>
                 </nav>
             </header>
-            <pre> <p>
-                Nah kalian pasti udah penasaran sama produk buatan kita kan,
-                nah produknya ada dibawah teks ini,kuy cobain.
-                <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+               <p> Nah kalian pasti udah penasaran sama produk buatan kita kan, </p>
+               <p> nah produknya ada dibawah teks ini,kuy cobain. </p>
+              <pre> <p>  <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
                 Fyi :
                 Untuk menggunakan aplikasinya kalian bisa klik bendera hijau yang ada di pojok kiri.
                 Jangan lupa untuk memasukan tinggi dalam bentuk METER ya 
