--- a/produk.html
+++ b/produk.html
@@ -12,7 +12,7 @@
                     <div class="KLIK"><h3>MENU</h3></div>
                     <div class="menu">
                         <ul>
-                            <li><a href="indeks.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="DP.html">Design Process</a></li>
                             <li><a href="#">Produk</a></li>
                         </ul>
