--- a/produk.html
+++ b/produk.html
@@ -20,9 +20,9 @@
                 </nav>
                 
             </header>
-               <p> Nah kalian pasti udah penasaran sama produk buatan kita kan, </p>
-               <p> nah produknya ada dibawah teks ini,kuy cobain. </p>
               <pre> <p>  <iframe src="https://scratch.mit.edu/projects/1026662630/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                
+                Nah diatas ini adalah produk buatan kelompok kami,yaitu wellnesswave,gas dicobaa.
                 Fyi :
                 Untuk menggunakan aplikasinya kalian bisa klik bendera hijau yang ada di pojok kiri.
                 Jangan lupa untuk memasukan tinggi dalam bentuk METER ya 
