--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                 <p>4. Priscilla Cecilia (Web Programmer)</p>
                 <p>Tanggung Jawab dan Tugas Web Developer adalah merancang tampilan visual dan menu navigasi pada website. Menulis dan meninjau kode untuk situs, biasanya HTML, XML, atau JavaScript. Mengintegrasikan konten multimedia ke situs, termasuk menautkan gambar, video, hingga asset multimedia lainnya. Dalam projek kali ini Cilla bertugas membuat kerangka html dan css dari web kami.</p>
                 <p>Nah itu saja perkenalan dari kelompok kami, salam kenal ya semuanya 😁👊🏻</p>
+                <p> Sumber : </p>
+                <p> 1. https://www.bakrie.ac.id/ </p>
+                <p> 2. https://www.karier.mu/blog/umum/karier-web-developer/ </p>
             </div>
         </div>
     </div>
